<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drivable_area</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arnshah@umich.edu">Arnav Shah</maintainer>
  <license>Appache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>cv2</depend> -->
  <!-- <depend>numpy</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
